--- a/styles.css
+++ b/styles.css
@@ -19,12 +19,12 @@ body {
     width: 100%;
     justify-content: space-between;
     align-items: center;
-}   
+}
 
-    #header img {
-        padding-left: 55px;
-         height: 29px;
-        }
+#header img {
+    padding-left: 55px;
+    height: 29px;
+}
 
 /* Menu */
 
@@ -45,7 +45,7 @@ nav a {
     padding-right: 35px;
     height: 100%;
     align-items: center;
-    border-top:2px solid transparent;
+    border-top: 2px solid transparent;
 }
 
 nav a:hover {
@@ -58,48 +58,81 @@ nav a:hover {
 
 /* Header Mobile */
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 767px) {
     #header img {
         height: 19px;
         padding-left: 0%;
     }
 
-    #header{
-        display:flex;
+    #header {
+        display: flex;
         flex-direction: column;
-        height:129px;
+        height: 129px;
         align-items: center;
         margin-top: 21px;
     }
 
-    nav{
+    nav {
         padding-right: 0%;
-        width:100%;
-        height:100%;
+        width: 100%;
+        height: 100%;
         display: flex;
-        justify-content: space-between;        
+        justify-content: space-between;
     }
 
     nav a {
-        height:100%;
-        width:100%;
+        height: 100%;
+        width: 100%;
         display: flex;
         justify-content: center;
-        border-bottom:3px solid #F2F2F2;
+        border-bottom: 3px solid #F2F2F2;
     }
 
-    nav a:hover {
+    nav a:focus {
         text-decoration: none;
         font-weight: 500;
         color: #0065FC;
         border-bottom: 3px solid #0065FC;
-        border-top:none;
-    
+        border-top: none;
+
     }
 
-  
+    nav a:hover {
+        text-decoration: none;
+        font-weight: 400;
+        color: black;
+        border-top: none;
+    }
+
+
 }
 
+/* Header Tablette */
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    #header img {
+        height: 19px;
+    }
+
+    nav {
+        padding-right: 25px;
+    }
+
+    nav a:hover {
+        text-decoration: none;
+        font-weight: 400;
+        color: black;
+        border-top: none;
+    }
+
+    nav a:focus {
+        text-decoration: none;
+        font-weight: 500;
+        color: #0065FC;
+        border-bottom: 3px solid #0065FC;
+        border-top: none;
+
+    }
+}
 
 
 
