--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,18 @@ body {
     max-width: 1400px;
     margin: auto;
 }
+h1 {
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26px;
+}
 
-/*Header*/
+h2 {
+    font-size: 16px;
+    font-weight: 400;
+
+}
+/*Header Desktop*/
 
 #header {
     display: flex;
@@ -65,6 +75,7 @@ nav a:hover {
     }
 
     #header {
+        max-width: 467px;
         display: flex;
         flex-direction: column;
         height: 129px;
@@ -135,7 +146,7 @@ nav a:hover {
 }
 
 
-/* Section Research */
+/* Section Research Desktop*/
 
 #Topsection {
     display: flex;
@@ -144,30 +155,30 @@ nav a:hover {
     padding-left: 55px;
     margin-top: 63px;
     height: 263px;
-    width:914px;
+    width: 914px;
 }
 
 
-#Searchbar{
+#Searchbar {
     display: flex;
     flex-direction: row;
-    height:49px;
+    height: 49px;
 }
 
-#LocLogo{
+#LocLogo {
     display: flex;
     background-color: #F2F2F2;
-    width:50px;
+    width: 50px;
     align-items: center;
     justify-content: center;
     border-radius: 15px 0px 0px 15px;
 }
 
-.Search{
+.Search {
     display: flex;
-    height:100%;
+    height: 100%;
     align-items: center;
-    width:236px;
+    width: 236px;
     border: 1px solid #F2F2F2;
     font-weight: 700;
     font-size: 18px;
@@ -175,9 +186,9 @@ nav a:hover {
 
 }
 
-#SearchButton{
+#SearchButton {
     display: flex;
-    width:132px;
+    width: 132px;
     background-color: #0065FC;
     border-radius: 0px 15px 15px 0px;
     align-items: center;
@@ -187,8 +198,8 @@ nav a:hover {
     color: white;
 }
 
-#FiltersBar{
-    display:flex;
+#FiltersBar {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     height: 50px;
@@ -196,7 +207,7 @@ nav a:hover {
     font-size: 18px;
 }
 
-.FilterButton{
+.FilterButton {
     border: 2px solid #D9D9D9;
     border-radius: 25px;
     padding: 4px 15px;
@@ -208,22 +219,22 @@ nav a:hover {
     color: #0065FC;
 }
 
-.FilterButton:hover{
+.FilterButton:hover {
     background-color: #DEEBFF;
 }
 
-#infobar{
+#infobar {
     display: flex;
     flex-direction: row;
     align-items: center;
     font-size: 16px;
 }
 
-#infobar i{
+#infobar i {
     display: flex;
     align-items: center;
     justify-content: center;
-    height:24px;
+    height: 24px;
     width: 24px;
     border-radius: 20px 20px 20px 20px;
     border: 1px solid #D9D9D9;
@@ -231,23 +242,44 @@ nav a:hover {
 }
 
 
+/* Section Research Mobile*/
+
+@media screen and (max-width: 767px){
+    #Topsection{
+        max-width: 375px;
+        height:463px;
+        margin-top: 30px;
+    }
+
+    #FiltersBar{
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+  .Filtres{
+        font-weight: 700;
+        font-size: 18px;
+        width: 100%;
+    }
 
 
+    .FilterButton{
+        display: flex;
+        align-items: center;
+        width: 160px;
+        height: 50px;
+        font-weight: 700;
+        font-size: 11px;
+        
 
+    }
 
-
-
-
-
-
-h1 {
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 26px;
+  
 }
 
-h2 {
-    font-size: 16px;
-    font-weight: 400;
 
-}
+
+
+
+
