--- a/styles.css
+++ b/styles.css
@@ -21,14 +21,20 @@ h1 {
 
 h2 {
     font-size: 16px;
-    font-weight: 400;
-
+    font-weight: 700;
 }
+
+h3{
+    font-size: 14px;
+    font-weight: 400;
+}
+
+
 
 /* Propriétés Générales Tablette */
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
-    body{
+    body {
         max-width: 1024px;
     }
 }
@@ -276,31 +282,32 @@ nav a:hover {
         height: 504px;
         margin-top: 30px;
         padding-left: 20px;
-        justify-content:space-between;
+        justify-content: space-between;
     }
 
-    #Searchbar{
-        width:332px;
-        #Searchbar{
-            Display:flex;
+    #Searchbar {
+        width: 332px;
+
+        #Searchbar {
+            Display: flex;
             justify-content: center;
         }
-    
+
     }
 
-    .Search{
-        width:232px;
+    .Search {
+        width: 232px;
     }
 
-    #SearchButton{
-        width:50px;
+    #SearchButton {
+        width: 50px;
     }
 
     #Rechercher {
-        Display:none;
+        Display: none;
     }
 
-    #SearchButton i{
+    #SearchButton i {
         display: inline;
     }
 
@@ -337,7 +344,7 @@ nav a:hover {
     #infobar i {
         padding-left: 10px;
         padding-right: 10px;
-        color:#0065FC;
+        color: #0065FC;
     }
 
 }
@@ -348,7 +355,7 @@ nav a:hover {
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
 
-    #Topsection{
+    #Topsection {
         padding-left: 70px;
         padding-right: 70px;
         height: 305px;
@@ -356,14 +363,14 @@ nav a:hover {
         padding-bottom: 39px;
     }
 
-    #Filtersbar{
-        display:flex;
+    #Filtersbar {
+        display: flex;
         justify-content: space-between;
     }
 
     .FilterButton {
-        height:50px;
-        display:flex;
+        height: 50px;
+        display: flex;
         align-items: center;
         padding-left: 15px;
         margin-left: 4px;
@@ -374,3 +381,127 @@ nav a:hover {
         padding-right: 6px;
     }
 }
+
+
+/* Bloc Main Desktop*/
+
+/*Article Hébergements*/
+
+#RésultatHébergement {
+    display: flex;
+    width: 880px;
+    height: 626px;
+    background-color: #F2F2F2;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: space-around;
+    margin-top: 40px;
+}
+
+#ListeHébergement {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 100%;
+    justify-content: space-around;
+    align-content: space-around;
+    flex:1.7;
+    margin-top: 10px;
+}
+
+.Titre{
+    display: flex;
+    align-items:end;
+    padding-left: 30px;
+    flex: 0.3;
+}
+
+#Afficher{
+    padding-left: 30px;
+    flex: 0.3;
+    font-weight: 700;
+    font-size: 18px;
+    display: flex;
+    align-items:center;
+}
+.BlocRésHéber {
+    display: flex;
+    width: 246px;
+    height: 199px;
+    background-color: white;
+    border-radius: 20px;
+    flex-direction: column;
+    justify-content: space-between;
+    border: 5px solid #FFFFFF;
+}
+
+.PhotoCanebière {
+    height: 124px;    
+    background-image: url(/Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg);
+    border-radius: 20px 20px 0px 0px;
+    background-size: 100% 100%;
+}
+
+
+.PhotoPort {
+    height: 124px;    
+    background-image: url(/Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg);
+    border-radius: 20px 20px 0px 0px;
+    background-size: 100% 100%;
+}
+
+.PhotoMouettes {
+    height: 124px;    
+    background-image: url(/Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg);
+    border-radius: 20px 20px 0px 0px;
+    background-size: 100% 100%;
+}
+
+.PhotoMer {
+    height: 124px;    
+    background-image: url(/Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg);
+    border-radius: 20px 20px 0px 0px;
+    background-size: 100% 100%;
+}
+
+.PhotoPanier {
+    height: 124px;    
+    background-image: url(/Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg);
+    border-radius: 20px 20px 0px 0px;
+    background-size: 100% 100%;
+}
+
+.PhotoAmina {
+    height: 124px;    
+    background-image: url(/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg);
+    border-radius: 20px 20px 0px 0px;
+    background-size: 100% 100%;
+}
+
+
+
+.NoteRésultat {
+    display: flex;
+    flex-direction: row;
+}
+
+.Etoile1{
+    color: #0065FC;
+}
+
+.Etoile2{
+    color: #0065FC;
+}
+
+.Etoile3{
+    color: #0065FC;
+}
+
+.Etoile4{
+    color: #0065FC;
+}
+
+.Etoile5{
+    color: #F2F2F2;
+}
+
