--- a/styles.css
+++ b/styles.css
@@ -396,6 +396,7 @@ nav a:hover {
     flex-direction: column;
     justify-content: space-around;
     margin-top: 40px;
+    margin-left: 50px;
 }
 
 #ListeHébergement {
