--- a/styles.css
+++ b/styles.css
@@ -349,14 +349,16 @@ nav a:hover {
         height: 50px;
         font-weight: 700;
         font-size: 11px;
-
-
     }
 
     #infobar i {
         padding-left: 10px;
         padding-right: 10px;
         color: #0065FC;
+    }
+
+    .FilterButton:hover {
+        background-color: #FFFFFF
     }
 
 }
@@ -395,7 +397,7 @@ nav a:hover {
     }
 
     .FilterButton:hover {
-        background-color: #DEEBFF;
+        background-color: #FFFFFF
     }
 }
 
@@ -463,15 +465,26 @@ main {
     background-color: white;
     border-radius: 20px;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     border: 5px solid #FFFFFF;
+}
+
+
+.TexteHeberg{
+    display: flex;
+    flex-direction: column;
+    height: 75px;
+    margin-left: 16px;
+    margin-top: 5px;
+    justify-content: space-around;
 }
 
 .PhotoCanebière {
     height: 124px;
     background-image: url(/Images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg);
     border-radius: 20px 20px 0px 0px;
-    background-size: 100% 100%;
+    background-size:  100% auto;
+    background-position: center center;
 }
 
 
@@ -479,35 +492,40 @@ main {
     height: 124px;
     background-image: url(/Images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg);
     border-radius: 20px 20px 0px 0px;
-    background-size: 100% 100%;
+    background-size:  100% auto;
+    background-position: center center;
 }
 
 .PhotoMouettes {
     height: 124px;
     background-image: url(/Images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg);
     border-radius: 20px 20px 0px 0px;
-    background-size: 100% 100%;
+    background-size:  100% auto;
+    background-position: center center;
 }
 
 .PhotoMer {
     height: 124px;
     background-image: url(/Images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg);
     border-radius: 20px 20px 0px 0px;
-    background-size: 100% 100%;
+    background-size:  100% auto;
+    background-position: center center;
 }
 
 .PhotoPanier {
     height: 124px;
     background-image: url(/Images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg);
     border-radius: 20px 20px 0px 0px;
-    background-size: 100% 100%;
+    background-size:  100% auto;
+    background-position: center center;
 }
 
 .PhotoAmina {
     height: 124px;
     background-image: url(/Images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg);
     border-radius: 20px 20px 0px 0px;
-    background-size: 100% 100%;
+    background-size:  100% auto;
+    background-position: center center;
 }
 
 
@@ -557,7 +575,7 @@ main {
     flex-direction: row;
     justify-content: center;
     height: 144px;
-    width: 80%;
+    width: 340px;
     margin-left: 40px;
     margin-top: 30px;
 }
@@ -577,32 +595,38 @@ main {
     width: 206px;
     justify-content: space-between;
     margin-left: 15px;
-    margin-top: 16px;
+    margin-top: 10px;
     margin-right: 22px;
 }
 
+
+
 .TextePop h3 {
-    margin-bottom: 44px;
+    margin-top: 5px;
+    margin-bottom: 40px;
 }
 
 .PhotoSoleil {
     width: 137px;
     background-image: url(/Images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg);
-    background-size: 100% 100%;
+    background-size: auto 100%;
+    background-position: center center;
     border-radius: 20px 0px 0px 20px;
 }
 
 .PhotoEau {
     width: 137px;
     background-image: url(/Images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg);
-    background-size: 100% 100%;
+    background-size: auto 100%;
+    background-position: center center;
     border-radius: 20px 0px 0px 20px;
 }
 
 .PhotoBleu {
     width: 137px;
     background-image: url(/Images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg);
-    background-size: 100% 100%;
+    background-size: 100% auto;
+    background-position: center center;
     border-radius: 20px 0px 0px 20px;
 }
 
@@ -622,7 +646,7 @@ main {
         height: 580px;
         border-radius: 0 0 0 0;
         margin-top: 20px;
-        padding-bottom: 47px;
+        padding-bottom: -50px;
         padding-top: 28px;
     }
 
@@ -631,6 +655,7 @@ main {
         margin-top: 20px;
         margin-right: 20px;
         margin-left: 20px;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
     }
 
     #RésultatPopulaires .Titre {
@@ -641,12 +666,10 @@ main {
 
     #RésultatHébergement {
         display: flex;
-        height: 1430px;
+        height: auto;
         width: 375px;
         margin-left: 0;
-        margin-top: 0;
-        align-items: center;
-        justify-content: space-between;
+        margin-top: 20px;
         background-color: #FFFFFF;
     }
 
@@ -664,6 +687,11 @@ main {
     .BlocRésHéber {
         width: 334px;
         margin-top: 12px;
+        box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+    }
+
+    #Afficher{
+        display: none;
     }
 
 }
@@ -673,18 +701,18 @@ main {
 
 @media screen and (min-width: 768px) and (max-width: 991px) {
 
-    #RésultatHébergement{
+    #RésultatHébergement {
         margin-top: 0;
         width: 880px;
         margin-left: 20px;
         margin-right: 20px;
     }
 
-    #RésultatHébergement .BlocRésHéber{
+    #RésultatHébergement .BlocRésHéber {
         width: 246px;
     }
 
-    #RésultatPopulaires{
+    #RésultatPopulaires {
         display: flex;
         justify-content: space-around;
         width: 880px;
@@ -693,38 +721,180 @@ main {
         margin-right: 20px;
     }
 
-    #ListePopulaires{
+    #ListePopulaires {
         display: flex;
         flex-direction: row;
         width: 700px;
-        justify-content: space-between;
-        padding-left: 10px;
+        justify-content:center;
+        margin-left: 40px;
     }
 
-    #RésultatPopulaires .BlocRésHéber{
+    #RésultatPopulaires .BlocRésHéber {
         width: 38%;
-        height:auto;
+        height: 150px;
         margin-right: 5px;
         margin-left: 5px;
     }
 
-    #ListePopulaires .TextePop{
+    #ListePopulaires .TextePop {
         display: flex;
         flex-direction: column;
         flex-wrap: nowrap;
         justify-content: space-around;
-        margin-left: 1px;
+        margin-left: 10px;
         margin-right: 0;
-        width: 60%;
+        width: 55%;
     }
 
-    #RésultatPopulaires h2{
+    #RésultatPopulaires h2 {
         font-size: 14px;
     }
 
-    #RésultatPopulaires h3{
+    #RésultatPopulaires h3 {
         font-size: 12px;
         padding-top: 3px;
     }
 
+}
+
+
+
+/* Bloc Activités Desktop */
+
+#BlocActivités{
+    height: 500px;
+    margin-top: 60px;
+    margin-left: 50px;
+
+}
+
+#BlocRésActivités{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100%;
+    margin-top: 19px;
+}
+
+.BlocActivité {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 450px;
+    width: 300px;
+    border-radius: 20px 20px 20px 20px;
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.1);
+}
+
+#BlocImageVieuxPort{
+    height: 390px;
+    width: 300px;
+    background-image: url(/Images/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg);
+    background-position: center center;
+    border-radius: 20px 20px 0 0;
+}
+
+#BlocImagePomègues{
+    height: 390px;
+    width: 300px;
+    background-image: url(/Images/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg);
+    background-position: center center;
+    border-radius: 20px 20px 0 0;
+}
+
+#BlocImageCalanques{
+    height: 390px;
+    width: 300px;
+    background-image: url(/Images/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg);
+    background-position: center center;
+    border-radius: 20px 20px 0 0;
+}
+
+#BlocImageGarde{
+    height: 390px;
+    width: 300px;
+    background-image: url(/Images/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg);
+    background-position: center center;
+    background-size: auto 100%;
+    border-radius: 20px 20px 0 0;
+}
+
+
+.NomRésultat{
+    margin-left: 20px;
+    margin-bottom: 20px;
+}
+
+
+/*Bloc Activités Mobile */
+
+@media screen and (max-width: 767px){
+    #TitreActivités{
+        margin-left: 20px;
+        margin-top: 50px;
+        width:120px;
+        margin-bottom: -30px;
+    }
+
+    #BlocActivités {
+        width: 375px;
+        height: auto;
+        margin-left: 0;
+        margin-top: 0;
+        background-color: #FFFFFF;
+    }
+
+    #BlocRésActivités{
+        display: flex;
+        flex-direction: column;        
+          
+    }
+
+    .BlocActivité {
+        height: 190px;
+        width: 334px;
+        margin-left: 20px;
+        margin-right: 20px;
+        margin-top: 20px;
+    }
+
+    #BlocImageVieuxPort{
+        width: 100%;
+        background-size:  100% auto;
+        background-position: center center;
+        border-radius: 20px 20px 0 0;
+    }
+
+    #BlocImagePomègues{
+        width: 100%;
+        background-size:  100% auto;
+        background-position: center center;
+        border-radius: 20px 20px 0 0;
+    }
+
+
+    #BlocImageCalanques{
+        width: 100%;
+        background-size:  100% auto;
+        background-position: center center;
+        border-radius: 20px 20px 0 0;
+    }
+
+
+    #BlocImageGarde{
+        width: 100%;
+        background-size:  100% auto;
+        background-position: center center;
+        border-radius: 20px 20px 0 0;
+    }
+
+    .NomRésultat{
+        margin-top: 20px;
+    }
+}
+
+/*Bloc Activités Tablette */
+
+@media screen and (min-width: 768px) and (max-width: 991px) {
+    
 }
