--- a/styles.css
+++ b/styles.css
@@ -189,9 +189,8 @@ nav a:hover {
 #Searchbar {
     display: flex;
     flex-direction: row;
+    width: 420px;
     height: 49px;
-    justify-content: left;
-
 }
 
 #LocLogo {
@@ -201,6 +200,10 @@ nav a:hover {
     align-items: center;
     justify-content: center;
     border-radius: 15px 0px 0px 15px;
+}
+
+form{
+    display: flex;
 }
 
 .Search {
